# RAG-constitution-RF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/prompts/: system_prompt.txt
data/raw/: constitution_rf_clean.txt
logs/: interactions.jsonl
src/api/: main.py  rag_api.py
src/chroma_db/: init_db.py
src/data_processing/: chunking.py  embeddings.py  load_docx_convert_to_txt.py
src/frontend/: app.py
src/rag_pipeline/: applying_to_LLM.py  prompt_engineering.py  reranker.py  retriever.py
