[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-constitution-rf"
version = "1.0.0"
description = "RAG system for the Constitution of the Russian Federation"
authors = [{ name = "Kirill Esakov", email = "kirill3456777@mail.ru" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "uvicorn>=0.38.0",
    "chromadb>=1.3.7",
    "langchain-ollama>=1.0.1",
    "sentence-transformers>=5.2.0",
    "python-dotenv>=1.2.1",
    "python-docx>=1.2.0",
    "pandas>=2.3.3",
    "numpy>=2.3.5",
    "pydantic-settings>=2.12.0",
    "streamlit>=1.52.2",
    "aiohttp>=3.13.2",
    "httpx>=0.28.1"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
include = ["*"]
exclude = ["__pycache__", "*.pyc"]
